<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="65dp">

        <Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_700"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="Units Calculator"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </Toolbar>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToLengthView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_straighten_96" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/length_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToAreaView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_square_foot_96"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/area_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToVolumeView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_opacity_96"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/volume_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToMassView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_fitness_center_96" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/mass_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToTimeView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_timer_96"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/time_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToSpeedView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_speed_96" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/speed_button"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoToTemperatureView">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="12dp"
                    android:src="@drawable/ic_baseline_device_thermostat_96" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/temperature_button"
                    android:textSize="20dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>